--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
         var title = $( "#movieTerm" ).val();
-        var queryURL = "http://www.omdbapi.com/?s=" + title + "&y=&plot=short&r=json";
+        var queryURL = "https://www.omdbapi.com/?s=" + title + "&y=&plot=short&r=json";
 
 
 
